fix styling for avatar, adjust searchbar on mobile/desktop devices

--- a/src/App.less
+++ b/src/App.less
@@ -33,7 +33,7 @@
       
       // for search bar
       .searchBar.responsive {
-        max-width: 360px;
+        max-width: 355px;
         width: 100%;
        
       }
@@ -55,11 +55,17 @@
     body {
       // for search bar
       .searchBar.responsive {
-        max-width: 340px;
+        max-width: 328px;
         width: 100%;
       }
+
+      // styling for searchBar on Feed page
+      .searchError {
+        max-width: 340px;
+      }
+
+
       #myTest {
-    
         margin-left: 150px;
       }
 
@@ -79,6 +85,12 @@
         max-width: 300px;
         width: 100%;
       }
+
+       // styling for searchBar on Feed page
+       .searchError {
+        max-width: 310px;
+      }
+
       #myTest {
         margin-left: 10px;
       }
@@ -96,7 +108,7 @@
     body {
       // for search bar
       .searchBar.responsive {
-        max-width: 310px;
+        max-width: 308px;
         width: 100%;
       }
       #myTest {
@@ -120,6 +132,8 @@
           max-width: 260px;
           width: 100%;
         }
+
+      
 
         #profile-responsive {
           padding-top: 300px;
@@ -151,9 +165,10 @@
         }
 
         .searchBar {
-          max-width: 415px;
+          max-width: 410px;
           width: 100%;         
         }
+        
     
         .searchIcon {
           color: orange;
@@ -177,5 +192,11 @@
         padding: 5px;
         max-width: 400px;
         width: 100%;
+      }
+
+  
+      // added this to remove scrollbar on search results when on mobile phones
+      .feed-responsiveOverflow {
+        height: auto;
       }
    }
